--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-informe-final-anexos/tabla-informe-final-anexos.component.html
@@ -48,10 +48,10 @@
           <ng-container matColumnDef="calificacionCodigo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Estado del requisito</th>
             <td mat-cell *matCellDef="let element">
-              <section class="slect-table-contain mt-1em" *ngIf="(element.estadoInformeFinal !== '4') || (element.aprobacionCodigo === '2' && element.estadoInformeFinal === '4' && element.tieneObservacionSupervisor)">
+              <section class="slect-table-contain mt-1em" *ngIf="(element.estadoInformeFinal !== '4' && element.estadoInformeFinal !== '8') || (element.aprobacionCodigo === '2' && ( element.estadoInformeFinal === '4' || element.estadoInformeFinal === '8' ) && element.tieneObservacionSupervisor)">
                 <mat-form-field class="select-width">
                   <mat-label>
-                    <span *ngIf="element.estadoInformeFinal !== '4' || (element.estadoInformeFinal === '4' && element.tieneModificacionInterventor)">{{ element.calificacionCodigoString }}</span>
+                    <span *ngIf="(element.estadoInformeFinal !== '4' && element.estadoInformeFinal !== '8' ) || ((element.estadoInformeFinal === '4' || element.estadoInformeFinal === '8' ) && element.tieneModificacionInterventor)">{{ element.calificacionCodigoString }}</span>
                   </mat-label>
                   <mat-select [(ngModel)]="element.calificacionCodigo" (selectionChange)="changeState()" required>
                     <mat-option *ngFor="let estado of estadoArray" [value]="estado.value">
@@ -71,7 +71,7 @@
                   />
                 </span>
               </section>
-              <span *ngIf="element.estadoInforme === '4' && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor)">{{ element.calificacionCodigoString }}</span>
+              <span *ngIf="(element.estadoInforme === '4' || element.estadoInforme === '8' ) && !(element.aprobacionCodigo === '2' && element.tieneObservacionSupervisor)">{{ element.calificacionCodigoString }}</span>
             </td>
           </ng-container>
       
