--- a/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/compromisos-actas-comite/components/form-solicitud/form-solicitud.component.html
@@ -94,7 +94,7 @@
               <label><b>Estado de la solicitud</b></label>
             </div>
             <div class="col w-50">
-              <span class="color-blue"> <b>{{ getEstadoSolicitud( solicitudes.estadoCodigo ) }}</b> </span>
+              <span class="color-blue"> <b>{{ solicitudes.estadoCodigo }}</b> </span>
             </div>
           </div>
         </div>
