--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
@@ -48,20 +48,16 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
                 <td mat-cell *matCellDef="let element" align="center"> 
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verificarSolicitud(element.gestion)"
-                    *ngIf="element.estadoVerificacion=='Sin verificación'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verificarSolicitud(element.gestion)">
                         Verificar solicitud
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()"
-                    *ngIf="element.estadoVerificacion=='Con verificación de la solicitud por el equipo financiero'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.openRechazo()">
                         Rechazar solicitud
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)"
-                    *ngIf="element.estadoVerificacion=='Con verificación de la solicitud por el equipo financiero'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalleEditar(element.gestion)">
                         Ver detalle/Editar
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)"
-                    *ngIf="element.estadoVerificacion=='Rechazada por el equipo financiero' || element.estadoVerificacion=='Con solicitud aprobada por el supervisor'">
+                    <button mat-raised-button color="accent" class="btn-table" (click)="this.verDetalle(element.gestion)">
                         Ver detalle
                     </button>
                 </td>
