--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad/form-registrar-novedad.component.html
@@ -105,5 +105,10 @@
   </div>
 </form>
 <div class="animatedDown" *ngIf="addressForm.controls.tipoNovedad.value">
-  <app-accordion-novedades [tiposNovedadModificacionContractual]="tiposNovedadModificacionContractual"></app-accordion-novedades>
+  <app-accordion-novedades 
+                          [tiposNovedadModificacionContractual]="tiposNovedadModificacionContractual"
+                          [novedadesSeleccionadas]="tipoNovedad.value"
+                          >
+  </app-accordion-novedades>
+
 </div>
