--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-contratos-asociados-dj/form-contratos-asociados-dj.component.html
@@ -75,7 +75,7 @@
                     </div>
                 </mat-card-content>
             </mat-card>
-            <div *ngIf="myControl.controls[i].value">
+            <div *ngIf="dataSource[i]?.filterPredicate?.length > 0">
                 <div style="margin-top: 1em;">
                     Seleccione la(s) Institución(es) Educativa(s), sede(s) asociada(s) al proceso
                 </div>
