--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-avance-semanal/components/gestion-calidad/gestion-calidad.component.html
@@ -97,7 +97,7 @@
                                   1000
                                 </span>
                             </div>
-                            <div class="text-center mt-1em" *ngIf="ensayo.get( 'registroCompletoMuestras' ).value === true">
+                            <div class="text-center mt-1em">
                                 <button mat-button
                                         color="warn"
                                         class="btn-guardar"
