--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-cargar-acta/dialog-cargar-acta.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-cargar-acta/dialog-cargar-acta.component.html
@@ -4,38 +4,67 @@
   
   <div class="text-center">
     <h1 class="title-menu--h1">
-        Cargar acta de terminación de contrato {{ data.registro.numeroContrato }}
+        Soporte de la terminación de contrato {{ data.registro.numeroContrato }}
     </h1>
   
     <form [formGroup]="formCargarActa" (ngSubmit)="guardar()">
       <div class="container w-80">
-        <div class="input-file">
-          <span class="input-file--text">{{archivo}}</span>
-  
-          <button mat-raised-button
-                  color="primary"
-                  type="button"
-                  (click)="fileInput.click()"
-                  class="input-file--btn">
-                  Explorar
-          </button>
-          <input  required
-                  hidden
-                  (change)="fileName()"
-                  #fileInput
-                  type="file"
-                  id="file"
-                  formControlName="fileCargarActa"
-                  accept="application/pdf">
-        </div>
-        <p class="text-color">
-            Explore en su computador o dispositivo y seleccione el documento que desea cargar <b>los formatos permitidos son: .pdf</b>
-        </p>
+        <ng-container *ngIf="data.registro.modalidadCodigo === listaModalidadCodigo.tipoA; else esTipoB">
+            <div class="row mt-1em">
+                <div class="col-md-12">
+                  <div class="row">
+                    <div class="pr-1" style="margin-top: .5em;">
+                      <label class="label-left">URL con soporte</label>
+                    </div>
+                    <div class="col d-flex">
+                        <mat-form-field style="width: 100%;">
+                            <input  matInput
+                                    type="text"
+                                    maxlength="400"
+                                    required
+                                    formControlName="rutaCargaActaTerminacionContrato">
+                        </mat-form-field>
+                    </div>
+                    <div class="d-flex justify-content-center size-text-descriptivo">
+                      <p class="color-text-descriptivo">
+                        <i> 
+                          Indique la ruta de la ubicación de los documentos de soporte de la terminación de contrato.
+                        </i>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </ng-container>
+        <ng-template #esTipoB>
+            <div class="input-file">
+                <span class="input-file--text">{{archivo}}</span>
+      
+                <button mat-raised-button
+                        color="primary"
+                        type="button"
+                        (click)="fileInput.click()"
+                        class="input-file--btn">
+                        Explorar
+                </button>
+                <input  required
+                        hidden
+                        (change)="fileName()"
+                        #fileInput
+                        type="file"
+                        id="file"
+                        formControlName="fileCargarActa"
+                        accept="application/pdf">
+            </div>
+            <p class="text-color">
+                Explore en su computador o dispositivo y seleccione el documento que desea cargar <b>los formatos permitidos son: .pdf</b>
+            </p>
+        </ng-template>
         <div class="margin-btn">
             <button mat-raised-button
                     color="accent"
                     type="submit"
-                    [disabled]="formCargarActa.get( 'fileCargarActa' ).invalid">
+                    [disabled]="formCargarActa.dirty === false">
                     Cargar
             </button>
         </div>
