--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-cargar-acta/dialog-cargar-acta.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/dialog-cargar-acta/dialog-cargar-acta.component.scss
@@ -10,3 +10,12 @@
     margin-bottom: 3em;
     margin-top: 2em;
 }
+
+.color-text-descriptivo {
+    color: rgba(0, 0, 0, 0.555);
+}
+
+.size-text-descriptivo {
+    width: 100%;
+    margin-left: 2em;
+}
