--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-avance-semanal/components/tabla-disponibilidad-material/tabla-disponibilidad-material.component.html
@@ -19,7 +19,7 @@
         </tr>
         <tr class="mat-header-row cdk-header-row ng-star-inserted">
             <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                materiales
+                Material
             </th>
             <th class="mat-header-cell cdk-header-cell ng-star-inserted" style="width: 15%;">
                 Equipo
