--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/form-registrar-novedad-contrato/form-registrar-novedad-contrato.component.html
@@ -3,7 +3,7 @@
         <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
                 {{ 
-                    tipoNovedad == "1" ? 'Suspension' :
+                    novedadDescripcion.tipoNovedadCodigo == "1" ? 'Suspension' :
                     tipoNovedad == "2" ? 'Prórroga a la Suspensión' : 
                     tipoNovedad == "3" ? 'Adición' : 
                     tipoNovedad == "4" ? 'Prorroga' :
