--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandados-dj/form-demandados-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandados-dj/form-demandados-dj.component.html
@@ -29,16 +29,18 @@
     </div>
 
     <mat-accordion formArrayName="perfiles" *ngIf="formContratista.get( 'numeroContratos' ).value !== null">
-        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let perfil of perfiles.controls; index as i">
+        <mat-expansion-panel class="expansion-style sub-expansion" *ngFor="let perfil of perfiles.controls; index as i" [formGroup]="perfil">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title " [ngClass]="{'sin-diligenciar': nomConvocado.value==''
-                 && nomConvocado.tipoIdentificacion =='' && nomConvocado.numIdentificacion==''
-                , 'completo': nomConvocado.value!=''&& nomConvocado.tipoIdentificacion !='' && nomConvocado.numIdentificacion!=''}">
-                    Demandado {{ i+1 }}
+                <mat-panel-title class="expansion-style--title 
+                {{ perfil.get('registroCompleto').value == null || (!perfil.get('registroCompleto').value && (nomConvocado.value=='' || nomConvocado.value==null)
+                && (nomConvocado.tipoIdentificacion =='' || nomConvocado.tipoIdentificacion==null) && (nomConvocado.numIdentificacion==''|| nomConvocado.numIdentificacion==null))? 
+                'sin-diligenciar' : !perfil.get('registroCompleto').value ? 
+                        'en-proceso' : 'completo' }}">
+                        Demandado {{ i+1 }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
-            <mat-card [formGroup]="perfil">
+            <mat-card>
                 <mat-card-content>
                     <div class="row">
                         <div class="col-md-12">
