--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-defensa-judicial/components/form-demandantes-convocantes-dj/form-demandantes-convocantes-dj.component.html
@@ -277,7 +277,9 @@
 <mat-accordion *ngIf="this.addressForm.value.demandaContraFFIE==true" class="animatedDown">
     <mat-expansion-panel class="expansion-style">
         <mat-expansion-panel-header class="expansion-style--header">
-            <mat-panel-title class="expansion-style--title ">
+            <mat-panel-title class="expansion-style--title "
+            [ngClass]="{'sin-diligenciar':demandado_class===0,'en-proceso':demandado_class===1,'completo':demandado_class===2}"
+            >
                 Demandados
             </mat-panel-title>
         </mat-expansion-panel-header>
