--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-validar-solicitud-validfsp/form-validar-solicitud-validfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-financ-solicitud-pago/components/form-validar-solicitud-validfsp/form-validar-solicitud-validfsp.component.html
@@ -1,48 +1,50 @@
-<section class="container text-center">
+<section class="container text-center" *ngIf="contrato !== undefined">
     <div class="text-right">
-        <a routerLink="/validarFinancieramenteSolicitudDePago" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/verificarFinancieramenteSolicitudDePago" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Validar solicitud {{this.solicitud}}
+        Validar solicitud {{ contrato.solicitudPagoOnly.numeroSolicitud }}
     </h1>
-    <p style="margin-top: 0.5em;" *ngIf="this.idGestion==1">
-        <span class="mx-1em"><b>Tipo de solicitud: </b>Contratos de obra</span>
-    </p>
-    <p style="margin-top: 0.5em;" *ngIf="this.idGestion==2">
-        <span class="mx-1em"><b>Tipo de solicitud: </b>Expensas</span>
-        <span class="mx-1em"><b>Número de contrato: </b>N326326</span>
-    </p>
-    <div *ngIf="this.idGestion==1">
+    <ng-container *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoInterventoria || contrato.solicitudPagoOnly.tipoSolicitudCodigo === this.tipoSolicitudCodigo.contratoObra; else esOtrosCostos">
+        <p style="margin-top: 0.5em;">
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Tipo de solicitud: <b>Contratos de obra</b></span>
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Tipo de solicitud: <b>Contratos de interventoria</b></span>
+        </p>
+
         <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
-                    Contratos de obra
+                    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoObra">Contratos de obra</span>
+                    <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.contratoInterventoria">Contratos de interventoria</span>
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p><strong>Modalidad del contrato:</strong> Tipo B</p>
-                <p><strong>Número de contrato:</strong> N801801</p>
+                <p><strong>Modalidad del contrato:</strong> {{ getModalidadContrato( contrato.modalidadCodigo ) }} </p>
+                <p><strong>Número de contrato:</strong> {{ contrato.numeroContrato }} </p>
             </mat-card-content>
         </mat-card>
+
         <mat-card class="shipping-card var-main-gris">
             <mat-card-header class="header-card header-card--margin">
                 <mat-card-title class="header-card--text textoGris">
-                    N801801
+                    {{ contrato.numeroContrato }}
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
                 <div class="chartGen">
                     <div class="chart1">
-                        <p><strong>Nombre de entidad contratista:</strong> Interventores S.A</p>
-                        <p><strong>Fecha de inicio del contrato:</strong> 26/09/2020</p>
-                        <p><strong>Plazo fase 1 - Preconstruccion: Meses:</strong> 02 <strong>Días:</strong> 00</p>
+                        <p><strong>Nombre de entidad contratista:</strong> {{ contrato.contratacion.contratista.nombre }} </p>
+                        <p><strong>Fecha de inicio del contrato:</strong> {{ contrato.contratoPoliza[0]?.fechaAprobacion | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 1 - Preconstruccion: Meses:</strong> {{ contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                     <div class="chart2">
-                        <p><strong>Plazo: Meses:</strong> 06 <strong>Días:</strong> 13</p>
-                        <p><strong>Fecha fin del contrato:</strong> 14/11/2021</p>
-                        <p><strong>Plazo fase 2 - Construccion: Meses:</strong> 05 <strong>Días:</strong> 28</p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses + contrato.plazoFase1PreMeses }} <strong>Días:</strong> {{ contrato.plazoFase1PreDias + contrato.plazoFase2ConstruccionDias }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias === undefined"><strong>Plazo: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
+                        <p><strong>Fecha fin del contrato:</strong> {{ contrato.fechaTerminacionFase2 | date: 'dd/MM/yyyy' }} </p>
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Plazo fase 2 - Construccion: Meses:</strong> {{ contrato.plazoFase2ConstruccionMeses }} <strong>Días:</strong> {{ contrato.plazoFase2ConstruccionDias }} </p>
                     </div>
                 </div>
                 <h2 class="card-subTitle">DRP</h2>
@@ -50,32 +52,33 @@
                     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                         <ng-container matColumnDef="drp">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.drp }}</b> </td>
+                            <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                         </ng-container>
                         <ng-container matColumnDef="numDrp">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numDrp }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
                         </ng-container>
                         <ng-container matColumnDef="valor">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitud }} </td>
                         </ng-container>
                         <ng-container matColumnDef="saldo">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                            <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
+                            <td mat-cell *matCellDef="let element" align="center"> Viene del CU Generar documento de registro presupuestal de alli viene el saldo inicial </td>
                         </ng-container>
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                     </table>
-                    <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
                 </div>
-                <div class="tabs--actions" style="margin-top: 1em;">
-                    <button mat-raised-button color="accent" class="tabs--btn auxBtn" (click)="this.openProyectosAsociados()">
+                <div class="tabs--actions"  style="margin-top: 1em;">
+                    <button mat-raised-button color="accent" class="tabs--btn auxBtn"
+                        (click)="openProyectosAsociados()">
                         Ver proyectos asociados
                     </button>
                 </div>
             </mat-card-content>
         </mat-card>
+
         <div class="text-center">
             <p class="info-container">
                 <span class="info-text sin-diligenciar">Sin diligenciar</span>
@@ -83,6 +86,7 @@
                 <span class="info-text completo">Completo</span>
             </p>
         </div>
+
         <mat-accordion>
             <mat-expansion-panel class="expansion-style">
                 <mat-expansion-panel-header class="expansion-style--header">
@@ -90,6 +94,7 @@
                         Cargar forma de pago
                     </mat-panel-title>
                 </mat-expansion-panel-header>
+
                 <mat-card class="shipping-card var-main-gris">
                     <mat-card-header class="header-card header-card--margin">
                         <mat-card-title class="header-card--text textoGris">
@@ -97,15 +102,14 @@
                         </mat-card-title>
                     </mat-card-header>
                     <mat-card-content style="text-align: left;">
-                        <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0px;">
+                        <mat-card-title class="header-card--text alineacion-titulos2" style="padding-left: 0px;" *ngIf="contrato.plazoFase1PreDias !== undefined">
                             Fase 1 - Preconstrucción
                         </mat-card-title>
-                        <p><strong>Forma de pago:</strong> Forma 1 (50/50)</p>
-                        <mat-card-title class="header-card--text alineacion-titulos2 mt-1em"
-                            style="padding-left: 0px; margin-top: 1em;">
+                        <p *ngIf="contrato.plazoFase1PreDias !== undefined"><strong>Forma de pago:</strong> {{ getFormaPago( solicitudPagoCargarFormaPago.fasePreConstruccionFormaPagoCodigo ) }} </p>
+                        <mat-card-title class="header-card--text alineacion-titulos2 mt-1em" style="padding-left: 0px; margin-top: 1em;">
                             Fase 2 - Construcción
                         </mat-card-title>
-                        <p><strong>Forma de pago:</strong> Forma 3 (90/10)</p>
+                        <p><strong>Forma de pago:</strong> {{ getFormaPago( solicitudPagoCargarFormaPago.faseConstruccionFormaPagoCodigo ) }} </p>
                     </mat-card-content>
                 </mat-card>
             </mat-expansion-panel>
@@ -115,84 +119,74 @@
                         Registrar solicitud de pago
                     </mat-panel-title>
                 </mat-expansion-panel-header>
-                <app-detalle-reg-sol-pago-validfsp></app-detalle-reg-sol-pago-validfsp>
-            </mat-expansion-panel>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title">
-                        Radicación SAC a financiera
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <mat-card class="shipping-card var-main-gris">
-                    <mat-card-content style="text-align: left;">
-                        <p><strong>Fecha de Radicación SAC a financiera:</strong> 10/10/2020</p>
-                        <p><strong>Número de radicación SAC a financiera:</strong> 009898</p>
-                        <p><strong>Fecha de asignación:</strong> 11/10/2020</p>
-                    </mat-card-content>
-                </mat-card>
-            </mat-expansion-panel>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title sin-diligenciar">
-                        Validar lista de chequeo
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-              <app-form-valid-listchequeo-validfsp></app-form-valid-listchequeo-validfsp>
+
+                <app-registrar-solicitud-pago [contrato]="contrato"></app-registrar-solicitud-pago>
             </mat-expansion-panel>
         </mat-accordion>
-    </div>
-    <div *ngIf="this.idGestion==2">
-        <mat-card class="shipping-card var-main-gris">
+    </ng-container>
+    <ng-template #esOtrosCostos>
+        <section class="mt-1em">
+            <span *ngIf="contrato.solicitudPagoOnly.tipoSolicitudCodigo === tipoSolicitudCodigo.otrosCostos">Tipo de solicitud: <b>Otros costos/servicios</b></span>
+        </section>
+        <mat-card class="shipping-card">
             <mat-card-header class="header-card header-card--margin">
-                <mat-card-title class="header-card--text textoGris">
-                    Expensas
+                <mat-card-title class="header-card--text">
+                    Otros costos y servicios
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content style="text-align: left;">
-                <p><strong>Llave MEN:</strong> LL990088</p>
-                <p><strong>Número de radicado SAC:</strong> 00987652</p>
-                <p><strong>Número de factura:</strong> FAC00983</p>
-                <p><strong>Valor facturado:</strong> $35.000.000</p>
-                <p><strong>Tipo de pago:</strong> Costo variable</p>
-                <p><strong>Concepto de pago para el criterio:</strong> Derribar arbol de 45 mtrs</p>
-                <p><strong>Valor facturado al concepto:</strong> $2.115.000</p>
+                <p><strong>Número de contrato:</strong> {{ contrato.numeroContrato }} </p>
+                <p><strong>Número de radicado SAC:</strong> {{ otrosCostosForm.get( 'numeroRadicadoSAC' ).value }} </p>
+                <p><strong>Número de factura:</strong> {{ otrosCostosForm.get( 'numeroFactura' ).value }} </p>
+                <p><strong>Valor facturado:</strong> ${{ otrosCostosForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+                <p *ngIf="otrosCostosForm.get( 'tipoPago' ).value !== null"><strong>Tipo de pago:</strong> {{ otrosCostosForm.get( 'tipoPago' ).value.nombre }} </p>
             </mat-card-content>
         </mat-card>
-        <div class="text-center">
-            <p class="info-container">
-                <span class="info-text sin-diligenciar">Sin diligenciar</span>
-                <span class="info-text en-proceso">En proceso</span>
-                <span class="info-text completo">Completo</span>
-            </p>
-        </div>
-        <mat-accordion>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title sin-diligenciar">
-                        Lista de chequeo    
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <app-form-valid-listchequeo-validfsp></app-form-valid-listchequeo-validfsp>
-            </mat-expansion-panel>
-        </mat-accordion>
-        <mat-accordion>
-            <mat-expansion-panel class="expansion-style">
-                <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title">
-                        Soporte
-                    </mat-panel-title>
-                </mat-expansion-panel-header>
-                <mat-card class="shipping-card var-main-gris">
-                    <mat-card-header class="header-card header-card--margin">
-                        <mat-card-title class="header-card--text textoGris">
-                            Soporte de la solicitud de pago
-                        </mat-card-title>
-                    </mat-card-header>
-                    <mat-card-content style="text-align: left;">
-                        <p><strong>URL con soporte:</strong> https://drive.google.com/drive/registrofactura/solicituddepago0001</p>
-                    </mat-card-content>
-                </mat-card>
-            </mat-expansion-panel>
-        </mat-accordion>
-    </div>
+    </ng-template>
+    <mat-accordion>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Radicación SAC a financiera
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <mat-card class="shipping-card var-main-gris">
+                <mat-card-content style="text-align: left;">
+                    <p><strong>Fecha de Radicación SAC a financiera:</strong> 10/10/2020 </p>
+                    <p><strong>Número de radicación SAC a financiera:</strong> 009898 </p>
+                    <p><strong>Fecha de asignación:</strong> 11/10/2020 </p>
+                </mat-card-content>
+            </mat-card>
+
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Validar lista de chequeo
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <app-form-valid-listchequeo-validfsp></app-form-valid-listchequeo-validfsp>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style">
+            <mat-expansion-panel-header class="expansion-style--header">
+                <mat-panel-title class="expansion-style--title">
+                    Soporte de la solicitud
+                </mat-panel-title>
+            </mat-expansion-panel-header>
+
+            <mat-card class="shipping-card var-main-gris">
+                <mat-card-header class="header-card header-card--margin">
+                    <mat-card-title class="header-card--text textoGris">
+                        Soporte de la solicitud de pago
+                    </mat-card-title>
+                </mat-card-header>
+                <mat-card-content style="text-align: left;">
+                    <p><strong>URL con soporte:</strong> {{ contrato.solicitudPagoOnly.solicitudPagoSoporteSolicitud[0].urlSoporte }} </p>
+                </mat-card-content>
+            </mat-card>
+
+        </mat-expansion-panel>
+    </mat-accordion>
 </section>
